fix: tomselect component multimode content overlaps with dropdown symbol

--- a/app/assets/tailwind/tomselect.css
+++ b/app/assets/tailwind/tomselect.css
@@ -387,7 +387,7 @@
 }
 
 .ts-wrapper.multi .ts-control {
-  @apply gap-2;
+  @apply gap-2 pr-6;
 }
 
 .ts-wrapper.multi .ts-control [data-value] {
